# bitworks

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain
.cargo/: config.toml  workspace.code-workspace
assetgen/: Cargo.toml
assets-generator/: Cargo.toml
assets-generator/src/: main.rs
bitworks/: Cargo.toml  config.ron
bitworks/assets/: 8x8x8.vox
bitworks/examples/: rapier_player_movement.rs
bitworks/src/: camera.rs  config.rs  game_types.rs  lib.rs  main.rs  merger.rs
bitworks/src/assets/: mod.rs
bitworks/src/components/: item_processor.rs
bitworks/src/extension_traits/: lyon.rs  mod.rs
bitworks/src/stuff/: colors.rs  compass.rs  mod.rs
bitworks/src/systems/: belt.rs  belt_advance_items.rs  belt_debug.rs  belt_graphics.rs  belt_input_output_hookup.rs  belt_sprite_animation.rs  game_state.rs  item_acceptor.rs  item_generators.rs  item_processor.rs  map_cache.rs  mod.rs  null_sink.rs  simple_spawner.rs  voxel.rs  wasd_player_movement.rs
inspectable/: Cargo.toml
inspectable/src/: expand_struct.rs  lib.rs
src/: core.rs  game_types.rs  lib.rs  lyon_ext.rs  main.rs  merger.rs  tools.rs
src/buildings/: mod.rs  paintcutter.rs
src/components/: item_acceptor.rs  item_ejector.rs  item_processor.rs  mod.rs  wiring.rs
src/extension_traits/: commands.rs  debug.rs  lyon.rs  mod.rs
src/systems/: belt_advance_items.rs  item_ejector.rs  item_generators.rs  item_processor.rs  map_cache.rs  mod.rs  null_sink.rs  show_metrics.rs
