[package]
name = "bitworks"
version = "0.1.0"
authors = ["Gilbert Rohrbein <gilbert.rohrbein@logmein.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5.0"
lazy_static = "1.4.0"
prometheus = "0.12.0"
prometheus-static-metric = "0.5.1"
