[package]
name = "bitworks"
version = "0.1.0"
authors = ["Gilbert Rohrbein <gilbert.rohrbein@logmein.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5.0"
bevy-inspector-egui = "0.5.1"
bevy_prototype_debug_lines = "0.3.1"
bevy_prototype_lyon = "0.3.1"
fastrand = "1.4.1"
lazy_static = "1.4.0"
lyon_path = "0.17.2"
prometheus = "0.12.0"
prometheus-static-metric = "0.5.1"

# from the same repo
inspectable = { path = "../inspectable" }