[package]
authors = ["Gilbert Rohrbein <gilbert.rohrbein@logmein.com>"]
edition = "2018"
name = "bitworks"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# from the same repo
inspectable = {path = "../inspectable"}

# game stuff
bevy = "0.5.0"
bevy-inspector-egui = "0.6.1"
bevy_prototype_debug_lines = "0.3.1"
bevy_prototype_lyon = "0.3.1"
fastrand = "1.4.1"
lazy_static = "1.4.0"
lyon_path = "0.17.2"
serde = "1.0.126"
ron = "0.6.4"
bevy_rapier2d = "0.10.2"
bevy_mod_picking = "0.4"
bevy_mod_raycast = "0.2"
bevy_vox_mesh = "0.3.0"
bevy_egui = "0.6.1"

[dependencies.smooth-bevy-cameras]
git = "https://github.com/bonsairobo/smooth-bevy-cameras"
branch = "main"
